# bz-platforms

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  images.sh  test.sh
diy/: BUILD.bazel  README.md  redhat.sh  systemd.sh  test.sh
images/centos/6/rpmbuild/: Dockerfile
images/rocky/8/rpmbuild/: Dockerfile
lsb/: BUILD.bazel  README.md  defs.bzl
lsb/toolchains/: BUILD.bazel  README.md  defs.bzl
python/: BUILD.bazel  README.md
rpm/: BUILD.bazel  test.sh
tools/: BUILD.bazel  defs.bzl
