# Tell bazel about the platforms we'll use for --platforms and --extra_execution_platforms
platform(
    name = "platform/linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

platform(
    name = "platform/linux/debian",
    constraint_values = [
        "//dist:debian",
    ],
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/fedora",
    constraint_values = [
        "//dist:fedora",
    ],
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/ubuntu",
    constraint_values = [
        "//dist:ubuntu",
    ],
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/rocky",
    constraint_values = [
        "//dist:rocky",
    ],
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/centos",
    constraint_values = [
        "//dist:centos",
    ],
    parents = [":platform/linux"],
)

# Let bazel know these are toolchains that we'll enable with --extra_toolchains
toolchain(
    name = "toolchain/debian",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:debian",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:debian",
    ],
    toolchain = "//lsb/toolchains:systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/fedora",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:fedora",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:fedora",
    ],
    toolchain = "//lsb/toolchains:systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/ubuntu",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:ubuntu",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:ubuntu",
    ],
    toolchain = "//lsb/toolchains:systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/centos",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    toolchain = "//lsb/toolchains:redhat",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/rocky",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    toolchain = "//lsb/toolchains:systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/centos/rpmbuild",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    toolchain = "//rpm:rpmbuild/4.8.0",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

toolchain(
    name = "toolchain/rocky/rpmbuild",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    toolchain = "//rpm:rpmbuild/4.14.3",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

toolchain(
    name = "toolchain/python",
    toolchain = "//python:python",
    toolchain_type = "@rules_python//python:toolchain_type",
)
