# Tell bazel about the platforms we'll use for --platforms and --extra_execution_platforms
platform(
    name = "platform/linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

platform(
    name = "platform/linux/debian",
    constraint_values = [
        "//dist:debian",
    ],
    exec_properties = {
        "container-image": "docker://executor:debian",
    },
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/fedora",
    constraint_values = [
        "//dist:fedora",
    ],
    exec_properties = {
        "container-image": "docker://executor:fedora",
    },
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/ubuntu",
    constraint_values = [
        "//dist:ubuntu",
    ],
    exec_properties = {
        "container-image": "docker://executor:ubuntu",
    },
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/rocky",
    constraint_values = [
        "//dist:rocky",
    ],
    exec_properties = {
        "container-image": "docker://executor:rocky",
    },
    parents = [":platform/linux"],
)

platform(
    name = "platform/linux/centos",
    constraint_values = [
        "//dist:centos",
    ],
    exec_properties = {
        "container-image": "docker://executor:centos",
    },
    parents = [":platform/linux"],
)

# Let bazel know these are toolchains that we'll enable with --extra_toolchains
toolchain(
    name = "toolchain/lsb/debian",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:debian",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:debian",
    ],
    toolchain = "//lsb:toolchain/systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/lsb/fedora",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:fedora",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:fedora",
    ],
    toolchain = "//lsb:toolchain/systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/lsb/ubuntu",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:ubuntu",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:ubuntu",
    ],
    toolchain = "//lsb:toolchain/systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/lsb/centos",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    toolchain = "//lsb:toolchain/redhat",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/lsb/rocky",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    toolchain = "//lsb:toolchain/systemd",
    toolchain_type = "//lsb:toolchain_type",
)

toolchain(
    name = "toolchain/rpmbuild/centos",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:centos",
    ],
    toolchain = "//rpm:toolchain/rpmbuild",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

toolchain(
    name = "toolchain/rpmbuild/rocky",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:rocky",
    ],
    toolchain = "//rpm:toolchain/rpmbuild",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

toolchain(
    name = "toolchain/rpmbuild/fedora",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:fedora",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:fedora",
    ],
    toolchain = "//rpm:toolchain/rpmbuild",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

# These are garbage/fake toolchains, they exist only to be resolved as incompatible
toolchain(
    name = "toolchain/rpmbuild/debian",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:debian",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:debian",
    ],
    toolchain = "@rules_pkg//toolchains/rpm:no_rpmbuild",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

toolchain(
    name = "toolchain/rpmbuild/ubuntu",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:ubuntu",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//dist:ubuntu",
    ],
    toolchain = "@rules_pkg//toolchains/rpm:no_rpmbuild",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

toolchain(
    name = "toolchain/python",
    toolchain = "//python:python",
    toolchain_type = "@rules_python//python:toolchain_type",
)
