# We could add another constraint, say for which source of metadata is in use, and reduce these genrules down to just
# two options: //init:systemd & //init:vendor/redhat (to match the command variations)

_systemd_cmd = """$(execpath systemd.sh) PRETTY_NAME $@"""

_redhat_cmd = """$(execpath redhat.sh) $@"""

# Each of these are constrained execution platform: they must execute in the desired container...
genrule(
    name = "pretty-name/debian",
    outs = ["pretty-name.debian.txt"],
    cmd = _systemd_cmd,
    exec_compatible_with = ["//dist:debian"],
    tools = ["systemd.sh"],
)

genrule(
    name = "pretty-name/fedora",
    outs = ["pretty-name.fedora.txt"],
    cmd = _systemd_cmd,
    exec_compatible_with = ["//dist:fedora"],
    tools = ["systemd.sh"],
)

genrule(
    name = "pretty-name/ubuntu",
    outs = ["pretty-name.ubuntu.txt"],
    cmd = _systemd_cmd,
    exec_compatible_with = ["//dist:ubuntu"],
    tools = ["systemd.sh"],
)

genrule(
    name = "pretty-name/rocky",
    outs = ["pretty-name.rocky.txt"],
    cmd = _systemd_cmd,
    exec_compatible_with = ["//dist:rocky"],
    tools = ["systemd.sh"],
)

genrule(
    name = "pretty-name/centos",
    outs = ["pretty-name.centos.txt"],
    cmd = _redhat_cmd,
    exec_compatible_with = ["//dist:centos"],
    tools = ["redhat.sh"],
)

# This test is not itself constrained where it can run (i.e. it can run on the host) given that it's data has been
# built on the right execution platform.
sh_test(
    name = "test",
    srcs = ["test.sh"],
    args = select({
        "//dist:debian": [ "$(rootpath :pretty-name/debian)", "^Debian.*", ],
        "//dist:fedora": [ "$(rootpath :pretty-name/fedora)", "^Fedora.*", ],
        "//dist:ubuntu": [ "$(rootpath :pretty-name/ubuntu)", "^Ubuntu.*", ],
        "//dist:rocky": [ "$(rootpath :pretty-name/rocky)", "^Rocky\\ Linux.*", ],
        "//dist:centos": [ "$(rootpath :pretty-name/centos)", "^CentOS.*", ],
    }),
    data = select({
        "//dist:debian": [":pretty-name/debian"],
        "//dist:fedora": [":pretty-name/fedora"],
        "//dist:ubuntu": [":pretty-name/ubuntu"],
        "//dist:rocky": [":pretty-name/rocky"],
        "//dist:centos": [":pretty-name/centos"],
    }),
)
