load(":defs.bzl", "lsb", "lsb_test")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

# Strictly check the OS name
lsb(
    name = "name",
    out = "name.txt",
    prop = "NAME",
)

lsb_test(
    name = "test/name/debian",
    src = ":name",
    expected = "Debian GNU/Linux",
    target_compatible_with = ["//dist:debian"],
)

lsb_test(
    name = "test/name/fedora",
    src = ":name",
    expected = "Fedora Linux",
    target_compatible_with = ["//dist:fedora"],
)

lsb_test(
    name = "test/name/ubuntu",
    src = ":name",
    expected = "Ubuntu",
    target_compatible_with = ["//dist:ubuntu"],
)

# Loosely check the OS pretty-name
lsb(
    name = "pretty-name",
    out = "pretty-name.txt",
    prop = "PRETTY_NAME",
)

lsb_test(
    name = "test/pretty-name/debian",
    src = ":pretty-name",
    expected = "^Debian.*",
    regexp = True,
    target_compatible_with = ["//dist:debian"],
)

lsb_test(
    name = "test/pretty-name/fedora",
    src = ":pretty-name",
    expected = "^Fedora.*",
    regexp = True,
    target_compatible_with = ["//dist:fedora"],
)

lsb_test(
    name = "test/pretty-name/ubuntu",
    src = ":pretty-name",
    expected = "^Ubuntu.*",
    regexp = True,
    target_compatible_with = ["//dist:ubuntu"],
)
