load(":defs.bzl", "lsb", "lsb_test")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

# Strictly check the OS name
lsb(
    name = "name",
    out = "name.txt",
    prop = "NAME",
)

lsb_test(
    name = "test/name/debian",
    src = ":name",
    expected = "Debian GNU/Linux",
    target_compatible_with = ["//dist:debian"],
)

lsb_test(
    name = "test/name/fedora",
    src = ":name",
    expected = "Fedora Linux",
    target_compatible_with = ["//dist:fedora"],
)

lsb_test(
    name = "test/name/ubuntu",
    src = ":name",
    expected = "Ubuntu",
    target_compatible_with = ["//dist:ubuntu"],
)

lsb_test(
    name = "test/name/rocky",
    src = ":name",
    expected = "Rocky Linux",
    target_compatible_with = ["//dist:rocky"],
)

lsb_test(
    name = "test/name/centos",
    src = ":name",
    expected = "CentOS release 6.10 (Final)",  # the //lsb/toolchains:redhat has only the one value it returns, the pretty name equivalent.
    target_compatible_with = ["//dist:centos"],
)

# Loosely check the OS pretty-name
lsb(
    name = "pretty-name",
    out = "pretty-name.txt",
    prop = "PRETTY_NAME",
)

lsb_test(
    name = "test/pretty-name/debian",
    src = ":pretty-name",
    expected = "^Debian.*",
    regexp = True,
    target_compatible_with = ["//dist:debian"],
)

lsb_test(
    name = "test/pretty-name/fedora",
    src = ":pretty-name",
    expected = "^Fedora.*",
    regexp = True,
    target_compatible_with = ["//dist:fedora"],
)

lsb_test(
    name = "test/pretty-name/ubuntu",
    src = ":pretty-name",
    expected = "^Ubuntu.*",
    regexp = True,
    target_compatible_with = ["//dist:ubuntu"],
)

lsb_test(
    name = "test/pretty-name/rocky",
    src = ":pretty-name",
    expected = "^Rocky\\ Linux.*",
    regexp = True,
    target_compatible_with = ["//dist:rocky"],
)

lsb_test(
    name = "test/pretty-name/centos",
    src = ":pretty-name",
    expected = "^CentOS.*",
    regexp = True,
    target_compatible_with = ["//dist:centos"],
)
