load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

package(default_visibility = ["//visibility:public"])

py_runtime(
    name = "python3",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
    stub_shebang = "#!/usr/bin/python3",  # For gods' sake, stop using /usr/bin/env python3, you never know which (if any) one you'll get
)

py_runtime_pair(
    name = "python",
    py3_runtime = ":python3",
)
