package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "toolchain_type",
)

load(":defs.bzl", dist_toolchain = "toolchain")

dist_toolchain(
    name = "debian",
    exec_cpu = "@platforms//cpu:x86_64",
    exec_dist = "//dist:debian",
    exec_os = "@platforms//os:linux",
    target_cpu = "@platforms//cpu:x86_64",
    target_dist = "//dist:debian",
    target_os = "@platforms//os:linux",
)

toolchain(
    name = "toolchain/debian",
    toolchain = ":debian",
    toolchain_type = ":toolchain_type",
)

dist_toolchain(
    name = "ubuntu",
    exec_cpu = "@platforms//cpu:x86_64",
    exec_dist = "//dist:ubuntu",
    exec_os = "@platforms//os:linux",
    target_cpu = "@platforms//cpu:x86_64",
    target_dist = "//dist:ubuntu",
    target_os = "@platforms//os:linux",
)

toolchain(
    name = "toolchain/ubuntu",
    toolchain = ":ubuntu",
    toolchain_type = ":toolchain_type",
)

dist_toolchain(
    name = "fedora",
    exec_cpu = "@platforms//cpu:x86_64",
    exec_dist = "//dist:fedora",
    exec_os = "@platforms//os:linux",
    target_cpu = "@platforms//cpu:x86_64",
    target_dist = "//dist:fedora",
    target_os = "@platforms//os:linux",
)

toolchain(
    name = "toolchain/fedora",
    toolchain = ":fedora",
    toolchain_type = ":toolchain_type",
)
